--- a/src/frontend/templates/product.html
+++ b/src/frontend/templates/product.html
@@ -26,7 +26,7 @@
   <div class="h-product container">
     <div class="row">
       <div class="col-md-6">
-        <img class="product-image" alt="" src="{{$.product.Item.Picture}}" />
+        <img class="product-image" alt="" src="{{ $.external_path }}{{$.product.Item.Picture}}" />
       </div>
       <div class="product-info col-md-5">
         <div class="product-wrapper">
@@ -35,7 +35,7 @@
           <p class="product-price">{{ renderMoney $.product.Price }}</p>
           <p>{{ $.product.Item.Description }}</p>
 
-          <form method="POST" action="/cart">
+          <form method="POST" action="{{ $.external_path }}/cart">
             <input type="hidden" name="product_id" value="{{$.product.Item.Id}}" />
             <div class="product-quantity-dropdown">
               <select name="quantity" id="quantity">
@@ -46,7 +46,7 @@
                 <option>5</option>
                 <option>10</option>
               </select>
-              <img src="/static/icons/Hipster_DownArrow.svg" alt="">
+              <img src="{{ $.external_path }}/static/icons/Hipster_DownArrow.svg" alt="">
             </div>
             <button type="submit" class="cymbal-button-primary">Add To Cart</button>
           </form>
@@ -56,11 +56,11 @@
   </div>
   <div>
     {{ if $.recommendations}}
-      {{ template "recommendations" $.recommendations }}
+      {{ template "recommendations" . }}
     {{ end }}
   </div>
   <div class="ad">
-   {{ with $.ad }}{{ template "text_ad" . }}{{ end }}
+    {{ template "text_ad" . }}
   </div>
 </main>
 {{ template "footer" . }}
