--- a/src/frontend/static/styles/styles.css
+++ b/src/frontend/static/styles/styles.css
@@ -301,12 +301,13 @@ main {
 
 .home-mobile-hero-banner {
   height: 200px;
-  background: url(/static/images/folded-clothes-on-white-chair-wide.jpg) no-repeat top center;
+  background: url(../images/folded-clothes-on-white-chair-wide.jpg) no-repeat
+    top center;
   background-size: cover;
 }
 
 .home-desktop-left-image {
-  background: url(/static/images/folded-clothes-on-white-chair.jpg) no-repeat center;
+  background: url(../images/folded-clothes-on-white-chair.jpg) no-repeat center;
   background-size: cover;
 }
 
